--- a/style.css
+++ b/style.css
@@ -101,3 +101,119 @@ body {
   font-size: 18px;
 }
 
+
+/* action section start */
+
+.preview-section {
+    margin-top: 116px;
+    gap: 50px; 
+    flex-wrap: wrap;
+}
+.action-container {
+    max-width: 1400px;
+    margin: auto;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.preview-section .left {
+  flex: 1;
+  min-width: 280px;
+}
+
+.preview-section h3 {
+  font-size: 42px;
+  font-weight: bold;
+  color: #1c1c1e;
+  margin-bottom: 15px;
+}
+
+.preview-section p {
+   
+  font-size: 18px;
+  color: #25243259;
+  margin-bottom: 25px;
+  max-width: 400px;
+}
+
+.preview-btn {
+    font-size: 16px;
+    font-weight: bold;
+    display: inline-block;
+    padding: 12px 20px;
+    background: #3F5EFB;
+    border: none;
+    color: #fff;
+    cursor: pointer;
+    font-weight: 600;
+    border-radius: 10px;
+    text-decoration: none;
+    transition: background 0.4s;
+}
+
+
+.preview-btn:hover {
+    background: radial-gradient(circle, rgba(63, 94, 251, 1) 0%, rgba(252, 70, 107, 1) 100%);
+   
+}
+ 
+
+.preview-section .right { 
+  min-width: 280px;
+  text-align: center;
+}
+
+
+
+/* Productive Users Section is start */
+ .stats-container {
+      background-color: rgba(0, 72, 255, 0.11);
+       
+      border-radius: 16px;
+      padding: 40px 20px;
+     width: 1140px; 
+     height: 306px;
+      margin: 116px auto;
+      text-align: center;
+      display: flex;
+      flex-direction: column;
+      gap: 30px;
+    }
+
+    .stats-heading {
+      font-size: 38px;
+      font-weight: bold;
+      color: #1a1a1a;
+    }
+
+    .stats {
+      display: flex; 
+      justify-content: space-around;
+      flex-wrap: wrap;
+    }
+
+    .stat-box {
+      text-align: center;
+      flex: 1;
+      min-width: 100px;
+    }
+
+    .stat-number { 
+      font-size: 80px;
+      font-weight: bold;
+      color: #4b4fff;
+    }
+
+    .stat-label {
+      margin-top: 5px;
+      color: #555;
+      font-size: 16px; 
+    }
+
+    @media (max-width: 600px) {
+      .stats {
+        flex-direction: column;
+        gap: 20px;
+      }
+    }
