--- a/style.css
+++ b/style.css
@@ -217,3 +217,86 @@ body {
         gap: 20px;
       }
     }
+
+
+    
+    /* Users Feedback Section is start */
+
+     .reviews-section {
+      padding: 60px 20px;
+      max-width: 1100px;
+      margin: auto;
+      text-align: center;
+    }
+
+    .reviews-section h2 {
+     font-family: "Raleway", sans-serif;
+      font-size: 42px;
+      font-weight: bold;
+      margin-bottom: 40px;
+      color: #1a1a1a;
+    }
+
+    .reviews {
+      display: flex;
+      gap: 20px;
+      flex-wrap: wrap;
+      justify-content: center;
+    }
+
+    .review-card {
+      background-color: #ffffff;
+      border-radius: 12px;
+      box-shadow: 0 2px 8px rgba(0, 0, 0, 0.637);
+      padding: 20px;
+      max-width: 300px; 
+      width: 100%;
+      text-align: left;
+    }
+
+  
+    .review-title {
+      margin-top: 24px;
+      font-weight: bold;
+      font-size: 18px;
+      margin-bottom: 10px;
+    }
+
+    .review-text {
+      font-size: 14px;
+      color: #444;
+      margin-bottom: 15px;
+    }
+
+    .reviewer {
+      margin-top: 24px;
+
+      display: flex;
+      align-items: center;
+      gap: 10px;
+    }
+
+    .reviewer img {
+      width: 36px;
+      height: 36px;
+      border-radius: 50%;
+      object-fit: cover;
+    }
+
+    .reviewer-info {
+      font-size: 13px;
+      color: #666;
+    }
+
+    .reviewer-info strong {
+      display: block;
+      font-weight: 600;
+      color: #333;
+    }
+
+    @media (max-width: 768px) {
+      .reviews {
+        flex-direction: column;
+        align-items: center;
+      }
+    }
