--- a/style.css
+++ b/style.css
@@ -300,3 +300,62 @@ body {
         align-items: center;
       }
     }
+
+
+
+    
+
+    /* Ready to focus better is start */
+       .focus-section { 
+        background-color: white;
+        box-shadow: 0 2px 8px rgba(0, 0, 0, 0.384);
+        max-width: 1440px;
+        margin: auto;
+        border-radius: 20px;
+        padding: 60px 20px;
+        text-align: center;
+        margin-top: 137px;
+    }
+
+    .focus-section h1 {
+      font-size: 36px;
+      font-weight: bold;
+      color: #111;
+      margin-bottom: 10px;
+    }
+
+    .focus-section p {
+      color: #666;
+      font-size: 16px;
+      margin-bottom: 25px;
+    }
+
+    .focus-section .btn {
+      background-color: #5c3bfe;
+      color: #fff;
+      padding: 12px 25px;
+      border: none;
+      border-radius: 8px;
+      font-size: 16px;
+      text-decoration: none;
+      transition: background 0.3s;
+    }
+
+    .focus-section .btn:hover {
+      background: #856c94;
+      background: linear-gradient(90deg, rgba(133, 108, 148, 1) 0%, rgba(253, 29, 29, 1) 75%, rgba(253, 37, 31, 1) 53%, rgba(252, 176, 69, 1) 100%);
+      font-size: 18px;
+    }
+
+    .focus-section .image-container {
+      margin-top: 40px;
+      display: flex;
+      justify-content: center;
+    }
+
+    .focus-section .image-container img {
+      width: 90%;
+      max-width: 800px;
+      border-radius: 30px;
+      box-shadow: 0 10px 30px rgba(0,0,0,0.15);
+    }
