--- a/style.css
+++ b/style.css
@@ -359,3 +359,135 @@ body {
       border-radius: 30px;
       box-shadow: 0 10px 30px rgba(0,0,0,0.15);
     }
+
+
+    /* Let’s Get in Touch is start */
+        .contact-section {
+            margin-top: 90px; 
+      padding: 80px 40px;
+      background-color: #f1f5ff;
+    }
+    .sub-container {
+            max-width: 1440px;
+            margin: auto;
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+    }
+
+    .contact-text {
+        flex: 1 1 40%; 
+          width: 528px;
+        height: 232px;
+        font-size: 97px;
+      font-weight: bold;
+      color: #111;
+      padding-right: 20px;
+      line-height: 1.2;
+    }
+
+    .contact-form {
+      flex: 1 1 50%;
+      display: flex;
+      flex-direction: column;
+      gap: 15px; 
+      max-width: 500px;
+    }
+
+    .contact-form label {
+      font-size: 18px;
+      font-weight: 500;
+      color: #333;
+      margin-bottom: 5px;
+    }
+
+    .contact-form input,
+    .contact-form textarea {
+      padding: 14px;
+      font-size: 16px;
+      border: 1px solid #ccc;
+      border-radius: 8px;
+      resize: vertical;
+      width: 100%;
+    }
+
+    .contact-form textarea {
+      height: 120px;
+    }
+
+    .contact-form button {
+      margin-top: 10px;
+      padding: 14px;
+      font-size: 16px;
+      background-color: #4f46e5;
+      color: white;
+      border: none;
+      border-radius: 8px;
+      cursor: pointer;
+      transition: background 0.3s;
+    }
+
+    .contact-form button:hover {
+      background: #2A7B9B;
+      background: linear-gradient(90deg, rgba(42, 123, 155, 1) 0%, rgba(87, 199, 133, 1) 49%, rgba(237, 221, 83, 1) 100%);
+    }
+
+    @media (max-width: 768px) {
+      .contact-section {
+        flex-direction: column;
+        padding: 40px 20px;
+      }
+
+      .contact-text {
+      
+        padding-bottom: 20px;
+        text-align: center;
+      }
+
+      .contact-form {
+        width: 100%;
+      }
+    }
+
+
+    /* footer section is start */
+    footer {
+      background-color: #fff;
+      text-align: center;
+      padding: 60px 20px;
+      color: #888;
+    }
+
+    .footer-logo {
+      font-size: 48px;
+      font-weight: 800;
+      color: #4f46e5;
+      margin-bottom: 20px;
+    }
+
+    .footer-desc {
+      font-size: 14px;
+      max-width: 600px;
+      margin: 0 auto 30px auto;
+      color: #666;
+      line-height: 1.6;
+    }
+
+    .footer-nav {
+      display: flex;
+      justify-content: center;
+      gap: 40px;
+      flex-wrap: wrap;
+    }
+
+    .footer-nav a {
+      text-decoration: none;
+      color: #888;
+      font-size: 14px;
+      transition: color 0.3s;
+    }
+
+    .footer-nav a:hover {
+      color: red;
+    }
+
